--- a/source/stylesheets/components/_button.scss
+++ b/source/stylesheets/components/_button.scss
@@ -42,3 +42,19 @@
   background-color: transparent;
   color: $red;
 }
+
+.button-container-main {
+  position: absolute;
+  bottom: -20px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .red-mobile-button {
+    background-color: red;
+    color: white;
+    padding: 10px 20px;
+    font-weight: bolder;
+    box-shadow: 0px 2px 4px rgba(1,1,1,0.3);
+  }
+}
